--- a/FirebridgeClient/FirebridgeClient.csproj
+++ b/FirebridgeClient/FirebridgeClient.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\DashboardPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\DashboardPanel.Designer.cs">
+      <DependentUpon>DashboardPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ZombieView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -70,6 +76,9 @@
     <Compile Include="Views\ZombieDetailView.Designer.cs">
       <DependentUpon>ZombieDetailView.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Controls\DashboardPanel.resx">
+      <DependentUpon>DashboardPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\ZombieView.resx">
       <DependentUpon>ZombieView.cs</DependentUpon>
     </EmbeddedResource>
