--- a/FirebridgeClient/FirebridgeClient.csproj
+++ b/FirebridgeClient/FirebridgeClient.csproj
@@ -37,6 +37,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -74,9 +77,14 @@
     <Compile Include="Views\MainView.Designer.cs">
       <DependentUpon>MainView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\ZombieProgramModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\textMessageBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\textMessageBox.Designer.cs">
+      <DependentUpon>textMessageBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\ZombieDetailView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,9 +112,13 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\textMessageBox.resx">
+      <DependentUpon>textMessageBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\ZombieDetailView.resx">
       <DependentUpon>ZombieDetailView.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
