--- a/LockPlugin/LockPlugin.csproj
+++ b/LockPlugin/LockPlugin.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
   </PropertyGroup>
 
@@ -10,9 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="PasswordForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="PasswordForm.cs" />
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
