--- a/ControllerPlugin/ControllerPlugin.csproj
+++ b/ControllerPlugin/ControllerPlugin.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
   </PropertyGroup>
   
@@ -10,21 +10,11 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Compile Update="DBPanel.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Update="DetailView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Update="FireBridgeControllerMenu.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Update="OverViewControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Update="ScreenshotSettings.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Update="DBPanel.cs" />
+    <Compile Update="DetailView.cs" />
+    <Compile Update="FireBridgeControllerMenu.cs" />
+    <Compile Update="OverViewControl.cs" />
+    <Compile Update="ScreenshotSettings.cs" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
