--- a/FireBridgeCore/FireBridgeCore.csproj
+++ b/FireBridgeCore/FireBridgeCore.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="System.Management" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Firebridge.Core.Networking\Firebridge.Core.Networking.csproj" />
+  </ItemGroup>
+
 </Project>
